*** empty log message ***

--- a/lang/ca/help/dialogue/closedialogue.html
+++ b/lang/ca/help/dialogue/closedialogue.html
@@ -1,13 +1,7 @@
 <p align="center"><b>Tancar di&agrave;legs</b></p>
-<p>Podeu tancar un di&agrave;leg en qualsevol moment. Tancar un di&agrave;leg
-	atura el di&agrave;leg i l'elimina de la vostra llista de di&agrave;legs actuals.
-	&Eacute;s a dir, que els di&agrave;legs tancats no apareixen en aquesta p&agrave;gina.</p>
+<p>Podeu tancar un di&agrave;leg en qualsevol moment. Tancar un di&agrave;leg atura el di&agrave;leg i l'elimina de la vostra llista de di&agrave;legs actuals. &Eacute;s a dir, els di&agrave;legs tancats no apareixen en aquesta p&agrave;gina.</p>
 
-<p>Podeu veure els di&agrave;legs tancats per&ograve; no podeu afegir-hi entrades.
-	Tanmateix, els di&agrave;legs tancats s'esborraran eventualment i en acabat
-	&ograve;bviament no estaran disponibles ni tan sols per veure'ls.</p>
+<p>Podreu veure els di&agrave;legs tancats per&ograve; no podeu afegir-hi res. Tanmateix, els di&agrave;legs tancats eventualment poden suprimir-se i a partir d'aquest moment	&ograve;bviament no estaran disponibles ni tan sols per veure'ls.</p>
 
-<p>Si tanqueu aquest di&agrave;leg, aleshores haureu d'iniciar un nou di&agrave;leg si voleu 
-	seguir &quot;xerrant&quot; amb aquesta persona. Aquesta persona tornar&agrave; a 
-	apar&egrave;ixer a la llista de gent amb qui podeu iniciar di&agrave;legs.</p>
+<p>Si tanqueu aquest di&agrave;leg, aleshores haureu d'iniciar un nou di&agrave;leg si voleu seguir "xerrant" amb aquesta persona. Aquesta persona tornar&agrave; a apar&egrave;ixer a la llista de gent amb qui podeu iniciar di&agrave;legs.</p>
 
