--- a/lang/ca/help/forum/attachment.html
+++ b/lang/ca/help/forum/attachment.html
@@ -1,11 +1,11 @@
-<P ALIGN=CENTER><B>Fitxers adjunts en els missatges</B></P>
+<P ALIGN=CENTER><B>Fitxers adjunts als missatges</B></P>
 
-<P>Opcionalment pots adjuntar UN fitxer del teu ordinador quan envies un missatge a un f&ograve;rum. Aquest fitxer es puja al servidor i es guarda amb el teu missatge.
+<P>Opcionalment podeu adjuntar UN fitxer del vostre ordinador quan envieu un missatge als f&ograve;rums. Aquest fitxer es penja al servidor i &eacute;s emmagatzemat amb el missatge.
 
-<P>Aix&ograve; &eacute;s &uacute;til quan vols compartir una imatge, per exemple, o un document de Word.
+<P>Aix&ograve; &eacute;s &uacute;til quan voleu compartir una imatge, per exemple, o un document del processador de textos.
 
-<P>El fitxer pot ser de qualsevol tipus, per&ograve; en tot cas &eacute;s molt aconsellable que tinga la t&iacute;pica extensi&oacute; de tres lletres, per exemple .doc per als documents Word, .gif o .jpg per a imatges, etc. Aix&ograve; far&agrave; m&eacute;s f&aacute;cil que els altres puguen baixar i veure els fitxers adjunts en els seus navegadors.
+<P>Aquest fitxer pot ser de qualsevol tipus, per&ograve; en tot cas &eacute;s molt aconsellable que tingui l'extensi&oacute; est&agrave;ndard de tres lletres com ara .doc per als documents Word, .jpg o .png per a imatges, etc. Aix&ograve; far&agrave; m&eacute;s f&aacute;cil que els altres puguin baixar i veure els vostres fitxers en els seus navegadors.
 
-<P>Si tornes a editar un missatge i hi adjuntes un nou fitxer, llavors aquest reempla&ccedil;ar&agrave; l'anterior.
+<P>Si editeu un missatge i hi adjunteu un nou fitxer, aleshores aquest reempla&ccedil;ar&agrave; l'anterior.
    
-<P>Si tornes a editar un missatge que t&eacute; un fitxer adjunt i deixes en blanc el camp de fitxer adjunt, llavors es conservar&agrave; el fitxer original.
+<P>Si editeu un missatge que t&eacute; un fitxer adjunt i deixeu en blanc el camp de fitxer adjunt, aleshores es conservar&agrave; el fitxer original.
