--- a/lang/ca/help/forum/forumtype.html
+++ b/lang/ca/help/forum/forumtype.html
@@ -4,8 +4,8 @@
 
 <P><B>Un debat simple</B> - &eacute;s un sol tema, tot en una p&agrave;gina. &Uacute;til per a debats breus i enfocats.
 
-<P><B>F&ograve;rum est&agrave;ndard per a &uacute;s general</B> - &eacute;s un f&ograve;rum obert en el qual tothom pot iniciar un nou tema en qualsevol moment. Aquest &eacute;s el millor f&ograve;rum de prop&ograve;sit gen&egrave;ric.
+<P><B>F&ograve;rum est&agrave;ndard per a &uacute;s general</B> - &eacute;s un f&ograve;rum obert en el qual tothom pot iniciar un nou tema en qualsevol moment. Aquest &eacute;s el millor f&ograve;rum de prop&ograve;sit general.
 
-<P><B>Cada persona envia un debat</B> - Cada persona pot enviar exactament un tema de debat (i tothom pot enviar-hi respostes). Aquest &eacute;s &uacute;til quan vols que cada estudiant inicie un debat, centrat per exemple en les seues reflexions sobre el tema de la setmana, i tots els altres li responen.
+<P><B>Cada persona envia un debat</B> - Cada persona pot enviar exactament un tema de debat (i tothom pot enviar-hi respostes). Aquest &eacute;s &uacute;til quan vols que cada estudiant inici&iuml; un debat, centrat per exemple en les seves reflexions sobre el tema de la setmana, i que tots els altres contestin.
 
-<P>(Hi haur&agrave; m&eacute;s desenvolupament en aquesta &agrave;rea en futures versions de Moodle.)
+<P>(M&eacute;s desenvolupament en versions futures de Moodle.)
