--- a/lang/ca/help/forum/index.html
+++ b/lang/ca/help/forum/index.html
@@ -1,9 +1,9 @@
-
 <p>F&ograve;rums</p>
 <ul>
-  <li><a href="help.php?module=forum&file=allowdiscussions.html">Permetre discussions</a>
-  <li><a href="help.php?module=forum&file=attachment.html">Adjunts</a>
-  <li><a href="help.php?module=forum&file=forumtype.html">Tipus de fòrums</a>
-  <li><a href="help.php?module=forum&file=ratings.html">Valoracions</a>
-  <li><a href="help.php?module=forum&file=subscription.html">Subscripció</a>
+  <li><a href="help.php?module=forum&amp;file=allowdiscussions.html">Permetre discussions</a>
+  <li><a href="help.php?module=forum&amp;file=attachment.html">Fitxers adjunts</a>
+  <li><a href="help.php?module=forum&amp;file=forumtype.html">Tipus de f&ograve;rums</a>
+  <li><a href="help.php?module=forum&amp;file=maxattachmentsize.html">Mida m&agrave;xima dels fitxers adjunts</a>
+  <li><a href="help.php?module=forum&amp;file=ratings.html">Valoracions</a>
+  <li><a href="help.php?module=forum&amp;file=subscription.html">Subscripci&oacute;</a>
 </ul>
