--- a/lang/ca/help/forum/mods.html
+++ b/lang/ca/help/forum/mods.html
@@ -1,12 +1,4 @@
-
 <P><IMG VALIGN=absmiddle SRC="<?php echo $CFG->wwwroot?>/mod/forum/icon.gif">&nbsp;<B>F&ograve;rums</B></P>
 <UL>
-  <p>Aquesta activitat pot ser la m&eacute;s important perqu&egrave; &eacute;s 
-    aqu&iacute; que tenen lloc la majoria de discussions. Es poden estructurar 
-    de diferents maneres i poden incloure una valoraci&oacute; de les aportacions 
-    per parts dels companys. Les aportacions es poden veure en diferents formats 
-    i poden tenir fitxers adjunts. Quan se subscriguin a un f&ograve;rum els participants 
-    rebran per correu electr&ograve;nic c&ograve;pies de cada intervenci&oacute;. 
-    Un professor pot imposar la subscripci&oacute; als seus estudiants si aix&iacute; 
-    ho desitja.</p>
+  <p>Aquesta activitat pot ser la m&eacute;s important: &eacute;s aqu&iacute; on t&eacute; lloc la major part del debat. Els f&ograve;rums es poden estructurar de diferents maneres i poden incloure una valoraci&oacute; de cada missatge per parts dels companys. Els missatges es poden visualitzar en diferents formats i poden incloure fitxers adjunts. Quan se subscriuen a un f&ograve;rum, els participants reben una c&ograve;pia de cada missatge per correu electr&ograve;nic. El professor pot imposar la subscripci&oacute; a tots els seus estudiants si aix&iacute; ho desitja.</p>
 </UL>
