--- a/lang/ca/help/forum/ratings.html
+++ b/lang/ca/help/forum/ratings.html
@@ -1,13 +1,7 @@
- 
 <p align="center"><b>Valoracions</b></p>
-<p>Les intervencions individuals poden ser valorades amb una escala basada en 
-  la <b>teoria del coneixement separat i connectat</b>. Aquesta teoria us pot 
-  ajudar a veure les interaccions humanes d'una altra manera. Descriu dues formes 
-  diferents d'avaluar i aprendre sobre les coses que veiem i sentim. Tot i que 
-  cadascun de nosaltres utilitzem aquests dos m&egrave;todes en diferent mesura 
-  en diferents ocasions, pot ser &uacute;til com exemple per entendre'ns prendre 
-  dues persones , una que sigui majorit&agrave;riament un coneixedor separat, 
-  en Joan, i l'altra que sigui majorment una coneixedora connectada, la Maria.</p>
+
+<p>Cada missatge es pot valorar utilitzant una escala basada en la <b>teoria del coneixement separat i connectat</b>. Aquesta teoria us pot ajudar a veure les interaccions humanes d'una altra manera. Descriu dues formes diferents d'avaluar i aprendre sobre les coses que veiem i sentim. Tot i que cadascun de nosaltres utilitzem aquests dos m&egrave;todes en diferent mesura en diferents ocasions, pot ser &uacute;til com a exemple per entendre'ns prendre dues persones , una que sigui majorit&agrave;riament un coneixedor separat, en Joan, i l'altra que sigui majorment una coneixedora connectada, la Maria.</p>
+
 <ul>
   <li>En Joan prefereix romandre tan 'objectiu' com sigui possible sense incloure 
     sentiments ni emocions. En una discussi&oacute; amb altres persones d'idees 
@@ -25,6 +19,7 @@
     de fer-ho, usant suggeriments l&ograve;gics. La Maria &eacute;s un bon exemple 
     de <b>coneixedora connectada.</b></li>
 </ul>
+
 <p>Us heu fixat que el coneixedor separat &eacute;s home i la connectada &eacute;s 
   dona? Alguns estudis han demostrat estad&iacute;sticament que aquesta &eacute;s 
   la realitat, tot i que hi ha casos individuals en tot l'espectre que va entre 
