--- a/lang/ca/help/index.html
+++ b/lang/ca/help/index.html
@@ -7,26 +7,26 @@
 
 <p>Administraci&oacute;</p>
 <ul>
-  <li><a href="help.php?file=langedit.html">Edició de l'idioma</a> 
-  <li><a href="help.php?file=uploadusers.html">Càrrega d'usuaris</a> 
+  <li><a href="help.php?file=langedit.html">Edici&oacute; de l'idioma</a> 
+  <li><a href="help.php?file=uploadusers.html">C&agrave;rrega d'usuaris</a> 
 </ul>
 
 <p>Configuraci&oacute; de cursos</p>
 <ul>
-  <li><a href="help.php?file=mods.html">Mòduls d'activitat</a> 
+  <li><a href="help.php?file=mods.html">M&ograve;duls d'activitat</a> 
   <li><a href="help.php?file=coursereports.html">Informes d'activitat</a>
   <li><a href="help.php?file=courseavailability.html">Disponibilitat d'un curs</a> 
   <li><a href="help.php?file=coursecategory.html">Categories de cursos</a> 
   <li><a href="help.php?file=courseformats.html">Formats de curs</a> 
   <li><a href="help.php?file=coursefullname.html">Nom complet del curs</a> 
-  <li><a href="help.php?file=coursenewsitems.html">Nombre de notícies del curs</a> 
+  <li><a href="help.php?file=coursenewsitems.html">Nombre de not&iacute;cies del curs</a> 
   <li><a href="help.php?file=coursenumsections.html">Nombre de setmanes o temes d'un curs</a> 
   <li><a href="help.php?file=courseshortname.html">Nom curt del curs</a> 
   <li><a href="help.php?file=coursestartdate.html">Data d'inici del curs</a> 
   <li><a href="help.php?file=courseuploadsize.html">Mida dels fitxers del curs</a> 
-  <li><a href="help.php?file=enrolmentkey.html">Clau d'inscripció del curs</a> 
+  <li><a href="help.php?file=enrolmentkey.html">Clau d'inscripci&oacute; del curs</a> 
   <li><a href="help.php?file=coursegrades.html">Qualificacions</a> 
-  <li><a href="help.php?file=guestaccess.html">Accés de visitants</a> 
+  <li><a href="help.php?file=guestaccess.html">Acc&eacute;s de visitants</a> 
   <li><a href="help.php?file=courserecent.html">Activitat recent</a> 
   <li><a href="help.php?file=scales.html">Escales</a> 
   <li><a href="help.php?file=summaries.html">Resums de seccions</a> 
