--- a/lang/ca/help/dialogue/info.html
+++ b/lang/ca/help/dialogue/info.html
@@ -1,21 +1,10 @@
 <img valign=absmiddle src="<?=$cfg->wwwroot?>/mod/dialogue/icon.gif">&nbsp;<b>Di&agrave;legs</b></p>
 
-<p>Aquest m&ograve;dul proporciona un m&egrave;tode senzill de comunicaci&oacute;n entre parelles d'usuaris.
-	Un professor pot obrir un di&agrave;leg amb un estudiant, un estudiant pot obrir
-	un di&agrave;leg amb un professor, i (opcionalment) un estudiant pot obrir un
-	di&agrave;leg amb un altre estudiant. Un professor o un estudiant poden participar
-	en molts di&agrave;legs oberts alhora.</p>
+<p>Aquest m&ograve;dul proporciona un m&egrave;tode senzill de comunicaci&oacute;n entre parelles d'usuaris. Un professor pot obrir un di&agrave;leg amb un estudiant i (opcionalment) un estudiant pot obrir un di&agrave;leg amb un professor, i (opcionalment) un estudiant pot obrir un di&agrave;leg amb un altre estudiant. Un professor o un estudiant poden participar simult&agrave;niament en diversos di&agrave;legs.</p>
 
-<p>Un di&agrave;leg pot tenir un nombre il&middot;limitat d'entrades, normalment la
-	&quot;conversa&quot; pren la forma d'una s&egrave;rie de r&egrave;pliques successives.
-	Aquest format no &eacute;s obligatori i cada part pot intervenir-hi
-	en qualsevol moment.</p>
+<p>Un di&agrave;leg pot tenir un nombre il&middot;limitat d'entrades. Normalment la &quot;conversa&quot; pren la forma d'una s&egrave;rie de r&egrave;pliques successives, per&ograve; aquest format no &eacute;s obligatori i cada part pot intervenir quan vulgui.</p>
 
-<p>Tots dos participants poden tancar el di&agrave;leg en qualsevol moment.
-	Els di&agrave;legs tancats no es poden reobrir. Tanmateix, els participants 
-	poden veure el di&agrave;leg mentre segueixi existint...</p>
+<p>Tots dos participants poden tancar el di&agrave;leg en qualsevol moment. Els di&agrave;legs tancats no es poden tornar a obrir. Tanmateix, els participants	poden veure el di&agrave;leg mentre segueixi existint...</p>
 	
-<p>...El m&ograve;dul esborra els di&agrave;legs tancats i totes les seves entrades
-	despr&eacute;s d'un cert temps. Aquest temps es pot ajustar aqu&iacute; quan es crea
-	el di&agrave;leg.</p>
+<p>...El m&ograve;dul suprimeix els di&agrave;legs tancats i totes les seves entrades despr&eacute;s d'un cert temps. Aquest temps es defineix aqu&iacute; quan es crea	el di&agrave;leg.</p>
 
