--- a/lang/ca/help/dialogue/multiple.html
+++ b/lang/ca/help/dialogue/multiple.html
@@ -1,9 +1,6 @@
 <p align="center"><b>M&uacute;ltiples di&agrave;legs</b></p>
 
-<p>Aquesta opci&oacute; permet que una persona inici&iuml; m&eacute;s d'un di&agrave;leg amb
-	una altra persona. El valor per defecte &eacute;s No, que vol dir que
-	nom&eacute;s es permet mantenir un di&agrave;leg obert entre dues persones.</p>
-<p>Permetre m&uacute;ltiples di&agrave;legs pot ocasionar un ab&uacute;s d'aquesta funcionalitat.
-	Algunes persones poden &quot;emprenyar&quot; altres obrint molts di&agrave;legs
-	no desitatjs amb elles.</p>
+<p>Aquesta opci&oacute; permet que una persona inici&iuml; m&eacute;s d'un di&agrave;leg amb una altra persona. El valor per defecte &eacute;s No, la qual cosa nom&eacute;s permet tenir un di&agrave;leg obert entre dues persones.</p>
+
+<p>Permetre m&uacute;ltiples di&agrave;legs pot ocasionar un ab&uacute;s d'aquesta funcionalitat. Algunes persones poden &quot;emprenyar&quot; altres obrint molts di&agrave;legs no sol&middot;licitats amb elles.</p>
 
