--- a/lang/ca/help/forum/allowdiscussions.html
+++ b/lang/ca/help/forum/allowdiscussions.html
@@ -1,5 +1,9 @@
-<P ALIGN=CENTER><B>Permetre nous debats</B></P>
+<P ALIGN=CENTER><B>Permetre nous missatges</B></P>
 
-<P>En la majoria dels f&ograve;rums voldr&agrave;s que els no professors puguen comen&ccedil;ar nous temes de debat (fils).
+<P>Aquesta opci&oacute; us permet impedir que els estudiants envi&iuml;n contingut nou a aquest f&ograve;rum.</P>
 
-<P>A vegades, per&ograve;, voldr&agrave;s inhabilitar aquesta opci&oacute;. Per exemple, aix&ograve; &eacute;s &uacute;til en el F&ograve;rum de not&iacute;cies si vols que nom&eacute;s els professors puguen posar not&iacute;cies a la primera plana del curs. Els estudiants, en tot cas, sempre podran enviar respostes als missatges dels professors.
+<P>En la majoria dels f&ograve;rums no voldreu posar restriccions als estudiants i triareu la primera opci&oacute;, que els permet iniciar nous temes de debat (fils) i tamb&eacute; enviar respostes dins d'aquests fils.
+
+<P>De vegades, per&ograve;, preferireu inhabilitar aquesta opci&oacute;. Per exemple, aix&ograve; &eacute;s &uacute;til en el f&ograve;rum de not&iacute;cies si voleu que nom&eacute;s els professors puguin enviar nous &iacute;tems, que apareixen a la p&agrave;gina principal del curs. En aquest cas triar&iacute;eu la tercera opci&oacute;: &laquo;Debats no, respostes no&raquo;.
+
+<P>Altres vegades potser voldreu permetre nom&eacute;s als professors iniciar nous debats, per&ograve; que els estudiants puguin contestar dins d'aquests fils (per exemple en el f&ograve;rum de not&iacute;cies de la p&agrave;gina inicial del lloc). En aquest cas trieu la segona opci&oacute;: &laquo;Debats no, per&ograve; respostes s&iacute;&raquo;.
