--- a/lang/ca/help/forum/subscription.html
+++ b/lang/ca/help/forum/subscription.html
@@ -1,9 +1,9 @@
 <P ALIGN=CENTER><B>Subscripci&oacute; als f&ograve;rums</B></P>
 
-<P>Quan una persona &eacute;s subscrita a un f&ograve;rum aix&ograve; vol dir que se li enviaran c&ograve;pies dels missatges del f&ograve;rum per correu electr&ograve;nic (les c&ograve;pies s'envien mitja hora despr&eacute;s que s'escriu el missatge).
+<P>Quan una persona &eacute;s subscrita a un f&ograve;rum aix&ograve; vol dir que se li enviar&agrave; per correu electr&ograve;nic una c&ograve;pia de cada missatge del f&ograve;rum (les c&ograve;pies s'envien <?PHP echo $CFG->maxeditingtime/60 ?> minuts despr&eacute;s que s'escriu el missatge).
 
 <P>Normalment la gent pot triar si vol o no vol estar subscrita a cada f&ograve;rum.
 
-<P>Tanmateix, si un processor for&ccedil;a la subscripci&oacute; a un f&ograve;rum concret, l'opci&oacute; desapareix i tots els membres de la classe reben c&ograve;pies per correu electr&ograve;nic.
+<P>Tanmateix, si un processor imposa la subscripci&oacute; a un f&ograve;rum concret, l'opci&oacute; desapareix i tots els membres de la classe reben c&ograve;pies per correu electr&ograve;nic.
 
 <P>Aix&ograve; &eacute;s especialment &uacute;til per al F&ograve;rum de not&iacute;cies i per a tots els f&ograve;rums actius durant el comen&ccedil;ament del curs, mentre tots s'adonen que existeix la possibilitat de subscriure's individualment per correu.
