*** empty log message ***

--- a/lang/ca/help/glossary/allowduplicatedentries.html
+++ b/lang/ca/help/glossary/allowduplicatedentries.html
@@ -1,7 +1,3 @@
+<P ALIGN=CENTER><B>Permet entrades duplicades</B></P>
 
-<P ALIGN=CENTER><B>Permeteu definicions duplicades?</B></P>
-
-<P>Indiqueu si desitgeu que el sistema permeti entrar definicions de conceptes 
-  iguals. 
-<p>Si seleccioneu que efectivament s&iacute; ho desitgeu, el sistema deixar&agrave; 
-  introduir dues o m&eacute;s definicions per un mateix concepte. 
+<p>Si activeu aquesta opci&oacute;, aleshores diferents entrades poden fer servir el mateix nom de concepte.</p>
