--- a/lang/ca/help/glossary/mods.html
+++ b/lang/ca/help/glossary/mods.html
@@ -1,10 +1,14 @@
-
 <P><IMG VALIGN=absmiddle SRC="<?php echo $CFG->wwwroot?>/mod/glossary/icon.gif">&nbsp;<B>Glossari</B></P>
+
 <UL>
-  <P>Aquest recurs permet la creació d'un glossari de termes creat b&eacute; pel 
-    professorat b&eacute; pels estudiants.<br />
-    Les definicions es poden veure de diferents maneres: Amb o sense l'usuari 
-    que les va crear.<br />
-    Es poden fer cerques per la lletra inicial o per termes. Tamb&eacute; es poden 
-    fer cerques per car&agrave;cters especials.
+
+<P>Aquesta activitat permet als participants crear i mantenir una llista de definicions, com un diccionari.</P>
+
+<P>Les entrades es poden cercar o explorar en diferents formats.</P>
+
+<P>El glossari tamb&eacute; permet als professors exportar entrades d'un glossari en un altre (el principal) dins del mateix curs.</P>
+
+<P>Finalment, &eacute;s possible crear enlla&ccedil;os autom&agrave;tics a aquestes entrades des de qualsevol punt del curs.</p>
+
 </UL>
+
