--- a/lang/ca/help/resource/index.html
+++ b/lang/ca/help/resource/index.html
@@ -1,8 +1,8 @@
-
-<p>M&ograve;dul de Recursos</p>
+<p>M&ograve;dul de recursos</p>
 <ul>
   <li><a href="help.php?module=resource&file=resourcetype.html">Tipus de recursos</a>
   <li><a href="help.php?module=resource&file=summary.html">Resum</a>
-  <li><a href="help.php?module=resource&file=program.html">Recursos de programari</a>
+  <li><a href="help.php?module=resource&file=program.html">Recursos de programa</a>
 </ul>
+
 
