--- a/lang/ca/help/resource/resourcetype.html
+++ b/lang/ca/help/resource/resourcetype.html
@@ -1,37 +1,25 @@
-
 <P ALIGN=CENTER><B>Tipus de recursos</B></P>
 
-<P>Els recursos poden incloure qualsevol contingut en qu&egrave; pogu&eacute;ssiu 
-  somiar. Aquests s&oacute;n els diferents tipus que, b&agrave;sicament, especifiquen 
-  com s'accedeix al contingut: 
-<P><B>Text pla</B>- el tipus m&eacute;s senzill. Nom&eacute;s cal que escriviu 
-  o editeu la p&agrave;gina en un formulari que us apareixer&agrave; en la seg&uuml;ent 
-  pantalla. Alguns trossos del que escriviu es formataran autom&agrave;ticament 
-  de la mateixa manera que passa en un f&ograve;rum. <a href="help.php?file=text.html">Més 
-  informació sobre el text autoformatat</a></p>
+<P>Els recursos s&oacute;n qualsevol contingut que pugueu imaginar. Aquests s&oacute;n els diferents tipus, que,
+b&agrave;sicament, especifiquen la manera d'accedir al contingut: 
+</P>
 
-<P><B>Text HTML</B> - per a usuaris avan&ccedil;ats. No hi ha cap autoformatatge 
-  del text sin&oacute; que cal fer-ho manualment usant codi HTML. <a href="help.php?file=html.html">Més 
-  informació sobre text HTML</a></p>
-<P><B>Refer&egrave;ncia</B> - una refer&egrave;ncia escolar a un diari o llibre. 
-<P><B>Arxiu carregat</B> - mostra els arxius que heu carregat al curs. Veieu la 
-  secci&oacute; &quot;Arxius&quot;. 
-<P><B>Enlla&ccedil; web</B> - una URL de qualsevol p&agrave;gina d'Internet. Quan 
-  alg&uacute; clica sobre el recurs &eacute;s dut fora del curs. La p&agrave;gina 
-  que heu especificat omplir&agrave; la finestra del navegador o, si aix&iacute; 
-  ho especifiqueu, obrir&agrave; una nova finestra. 
-<P><B>P&agrave;gina web</B> - una URL d'algun lloc d'Internet. Com el tipus anterior 
-  mostrar&agrave; una una p&agrave;gina web. Per&ograve; a difer&egrave;ncia seva 
-  la p&agrave;gina es mostrar&agrave; <b>en un marc</b>, com si estigu&eacute;s 
-  integrada en el curs.
-<P><B>Programari</B> - un programa extern que necessita informaci&oacute; passada 
-  des de l'actual curs i usuari de Moodle. Aix&ograve; permet a aplicacions web 
-  externes cooperar amb Moodle . <a href="help.php?file=program.html&module=resource">Més 
-  informació sobre recursos de programari</a></p>
+<P><B>Text:</B> el tipus m&eacute;s senzill. Nom&eacute;s cal que escriviu (editeu) la p&agrave;gina en el formulari que us sortir&agrave; a la pantalla seg&uuml;ent. Algunes coses que escriviu
+es formataran autom&agrave;ticament igual que passa amb els missatges dels f&ograve;rums. <A HREF="./help.php%3Ffile=text.html">M&eacute;s informaci&oacute; sobre text formatat autom&agrave;ticament</A></P>
 
-<p><b>Text Wiki </b> - permet m&eacute;s opcions de formatatge que el text pla 
-  per&ograve; sense necessitat de saber codi HTML. S'escriu text pla per&ograve; 
-  s'hi poden incloure una gran quantitat de car&agrave;cters de format per crear 
-  f&agrave;cilment un format complex. Per exemple, *aix&ograve; ser&agrave; negreta* 
-  o b&eacute; /aix&ograve; ser&agrave; emfasitzat/. <a href="help.php?file=wiki.html">Més 
-  informació sobre el format Wiki</a></p>
+<P><B>Text HTML:</B> per a usuaris avan&ccedil;ats. No es produeix cap formatatge autom&agrave;tic, sin&oacute; que cal fer-ho tot a m&agrave; usant codi HTML. <A HREF="./help.php%3Ffile=html.html">M&eacute;s informaci&oacute; sobre text HTML</A></P>
+
+<P><B>Refer&egrave;ncia:</B> una refer&egrave;ncia acad&egrave;mica a una revista o un llibre.</P>
+
+<P><B>Fitxer penjat:</B> visualitza qualsevol fitxer que h&agrave;giu penjat al curs. Vegeu la secci&oacute; &quot;Fitxers&quot;.</P>
+
+<P><B>Enlla&ccedil; web:</B> un URL de qualsevol adre&ccedil;a web. Quan alg&uacute; fa clic en aquest recurs, es trasllada fora del curs (la p&agrave;gina que heu especificat omplir&agrave; la finestra del navegador o, si ho especifiqueu aix&iacute;, s'obrir&agrave; en una nova finestra).</P>
+
+<P><B>P&agrave;gina web:</B> un URL de qualsevol p&agrave;gina web. Igual que el tipus anterior, aquest visualitza una p&agrave;gina web. Per&ograve; la p&agrave;gina es visualitza <B>en un marc</B>, com si estigu&eacute;s integrada en el curs.</P>
+
+<P><B>Programa:</B> un programa extern que necessita que Moodle li passi informaci&oacute; sobre el curs i l'usuari. Aix&ograve; permet que aplicacions web externes cooperin amb Moodle . <A HREF="./help.php%3Ffile=program.html&amp;module=resource">M&eacute;s
+informaci&oacute; sobre recursos de programa</A></P>
+
+<P><B>Text Wiki:</B> permet m&eacute;s opcions de formatatge que el text normal, per&ograve; sense necessitat d'aprendre HTML. S'escriu com el text normal i s'hi afegeixen car&agrave;cters de formatatge (p. e. *aix&ograve; ser&agrave; negreta* o b&eacute;
+/aix&ograve; ser&agrave; cursiva/) per crear f&agrave;cilment un formatatge complex. <A HREF="./help.php%3Ffile=wiki.html">M&eacute;s informaci&oacute; sobre text Wiki</A></P>
+
