--- a/lang/ca/help/resource/summary.html
+++ b/lang/ca/help/resource/summary.html
@@ -1,6 +1,8 @@
-
 <P ALIGN=CENTER><B>Resum</B></P>
 
-<P>El resum &eacute;s una descripci&oacute; molt curta del recurs.
-<P>No estigueu temptat d'escriure massa aqu&iacute; o d'incloure el propi recurs. 
-  Trobareu l'oportunitat de fer-ho a la propera pantalla.
+<P>El resum &eacute;s una descripci&oacute; molt breu del recurs.</P>
+
+<P>No tingueu la temptaci&oacute; d'escriure massa text, o d'incloure el recurs complet aqu&iacute;.</P>
+
+<p>A la p&agrave;gina seg&uuml;ent tindre l'oportunitat d'especificar el contingut.</P>
+
