--- a/lang/ca/help/glossary/mainglossary.html
+++ b/lang/ca/help/glossary/mainglossary.html
@@ -1,7 +1,7 @@
+<P ALIGN=CENTER><B>Definir el glossari principal del curs</B></P>
 
-<P ALIGN=CENTER><B>Aquest &eacute;s el glossari principal del curs?</B></P>
+<P>Podeu exportar entrades dels glossaris secundaris al glossari principal del curs.</P>
 
-<P>El sistema permet exportar definicions dels glossaris secundaris al glossari 
-  principal del sistema. 
-<p>Per fer aix&ograve; heu d'especificar quin &eacute;s el glossari principal. 
-  Observeu que nom&eacute;s pot haver-hi un glossari principal per curs.
+<p>Per fer aix&ograve;, heu d'especificar quin &eacute;s el glossari principal. </p>
+
+<p>Av&iacute;s: nom&eacute;s pot haver-hi un glossari principal per curs i nom&eacute;s els professors poden actualitzar-lo.</P>
