--- a/lang/ca/help/glossary/studentcanpost.html
+++ b/lang/ca/help/glossary/studentcanpost.html
@@ -1,6 +1,5 @@
+<P ALIGN=CENTER><B>Els estudiants poden afegir entrades</B></P>
 
-<P ALIGN=CENTER><B>Els estudiants podran afegir definicions?</B></P>
+<P>Podeu especificar si els estudiants poden o no poden afegir, editar o suprimir entrades. Les entrades que s'exportin a un glossari principal nom&eacute;s poden ser actualitzades o suprimides per professors, de manera que aquest par&agrave;metre nom&eacute;s s'aplica a glossaris secundaris.</P>
 
-<P>Indiqueu si voleu que els estudiants puguin o no afegir definicions al glossari. 
-<p>Si seleccioneu que poden fer-ho, el sistema els permetr&agrave;, a m&eacute;s, 
-  modificar i eliminar les seves definicions. 
+<P>Nota: un professor pot editar o suprimir sempre qualsevol entrada.</P>
