--- a/lang/ca/help/resource/mods.html
+++ b/lang/ca/help/resource/mods.html
@@ -1,9 +1,7 @@
-
 <P><IMG VALIGN=absmiddle SRC="<?php echo $CFG->wwwroot?>/mod/resource/icon.gif">&nbsp;<B>Recursos</B></P>
+
 <UL>
-  <p>Els recursos s&oacute;n contingut o informaci&oacute; que el professorat 
-    vol incorporar al curs. Es pot tractar de fitxers preparats i carregats al 
-    servidor, p&agrave;gines editades directament amb Moodle o p&agrave;gines 
-    web externes fetes per formar part del curs.</p>
+  <p>Els recursos s&oacute;n contingut: informaci&oacute; que el professor vol incorporar al curs. Es pot tractar de fitxers preparats i penjats al servidor del curs, p&agrave;gines editades directament dins de Moodle o p&agrave;gines web externes que es fan apar&egrave;ixer com a part del curs.</p>
 </UL>
+
 
