--- a/lang/ca/help/resource/program.html
+++ b/lang/ca/help/resource/program.html
@@ -1,16 +1,16 @@
+<P ALIGN=CENTER><B>Recursos de programa</B></P>
 
-<P ALIGN=CENTER><B>Recursos de programari</B></P>
+<p>Un recurs de programa &eacute;s un recurs extern que pot acceptar dades que li subministra Moodle.</p>
 
-<p>Un recurs de programari &eacute;s un recurs extern que pot acceptar dades que 
-  li subministra Moodle.</p>
-<p>Les dates es passen via HTTP GET com a part d'una URL i inclouen:</p>
+<p>Les dates es passen via HTTP GET (com a part de l'URL) i inclouen:</p>
+
 <ul>
-  <li>extern_nav: la URL des d'on es crida el recurs
+  <li>extern_nav: l'URL des d'on es crida el recurs
   <li>extern_usr: el nom d'usuari de l'usuari actual 
   <li>extern_nam: el nom complet de l'usuari actual
   <li>extern_tim: l'hora actual
   <li>extern_pwd: una contrasenya &uacute;nica
 </ul>
 
-<p>Molt aviat hi haur&agrave; una revisi&oacute; sobre aquest tema.</p>
+<p>Tot aix&ograve; s'ha de revisar en un futur pr&ograve;xim.</p>
 
