*** empty log message ***

--- a/lang/ca/help/langedit.html
+++ b/lang/ca/help/langedit.html
@@ -1,6 +1,6 @@
 <P ALIGN=CENTER><B>Edici&oacute; d'idioma</B></P>
 
-<P>Si voleu editar els idiomes en aquesta p&agrave;gina cal que els fitxers puguin ser escrits pel proc&eacute;s del servidor web.</P>
+<P>Si voleu editar els idiomes en aquesta p&agrave;gina cal que el proc&eacute;s del servidor web pugui escriure els fitxers.</P>
  
 <p>Dins d'algunes cadenes observareu <b>$a</b> i <b>$a->something</b>.</p>
 
