--- a/lang/ca/help/survey/mods.html
+++ b/lang/ca/help/survey/mods.html
@@ -1,9 +1,5 @@
-
 <P><IMG VALIGN=absmiddle SRC="<?php echo $CFG->wwwroot?>/mod/survey/icon.gif">&nbsp;<B>Enquestes</B></P>
 <UL>
-  <p>El m&ograve;dul d'enquestes proveeix d'un bon nombre d'instruments d'investigaci&oacute; 
-    que han demostrat ser for&ccedil;a &uacute;tils per estimular i avaluar en 
-    medis virtuals d'aprenentatge. El professorat pot usar-los per recollir dades 
-    dels seus estudiants que l'ajudaran a con&egrave;ixer la seva classe i com 
-    s'hi reflecteix el seu propi ensenyament.</p>
+  <p>El m&ograve;dul d'enquestes proporciona un cert nombre d'instruments d'investigaci&oacute; que han demostrat ser &uacute;tils per estimular i avaluar en entorns virtuals d'aprenentatge. El professor pot usar-los per recollir dades dels estudiants que l'ajudaran a con&egrave;ixer la seva classe i a reflexionar sobre la seva tasca d'ensenyant.</p>
 </UL>
+
