--- a/lang/nl/help/wiki/htmlmode.html
+++ b/lang/nl/help/wiki/htmlmode.html
@@ -7,7 +7,7 @@
 <dt>Veilige HTML</dt>
 <dd>Sommige tags zijn toegelaten en worden verwerkt.</dd>
 <dt>Alleen HTML</dt>
-<dd>Geen WikiWoorden, alleen HTML. TMet deze optie kun je de HTML-Editor gebruiken.</dd>
+<dd>Geen WikiWoorden, alleen HTML. Met deze optie kun je de HTML-Editor gebruiken.</dd>
 </dl>
 
 </P>
