*** empty log message ***

--- a/lang/ca/help/forum/ratings.html
+++ b/lang/ca/help/forum/ratings.html
@@ -18,7 +18,7 @@
 <p>En una situaci&oacute; concreta com un f&ograve;rum electr&ograve;nic, una intervenci&oacute; d'una persona pot mostrar alguna de les dues caracter&iacute;stiques i fins i tot les dues. Alg&uacute; que generalment &eacute;s un bon coneixedor 'connectat' pot fer una intervenci&oacute; molt 'separada', i a l'inrev&eacute;s. L'objectiu de valorar cada missatge per mitj&agrave; d'aquesta escala &eacute;s:</p>
 
 <blockquote>
-a) ajudar-vos a pensar sobre aquestes q&uuml;estions quan llegiu altres missatges i b) proporcionar informaci&oacute; a cada autor sobre com el veuen els altres.
+a) ajudar-vos a pensar sobre aquestes q&uuml;estions quan llegiu altres missatges i b) proporcionar retroacci&oacute; a cada autor sobre com el veuen els altres.
 </blockquote>
 
 <p>Els resultats no s'utilitzen per avaluar de cap manera els estudiants; simplement serveixen per ajudar a millorar la comunicaci&oacute; i l'aprenentatge.</p>
