--- a/lang/nl/help/wiki/initialcontent.html
+++ b/lang/nl/help/wiki/initialcontent.html
@@ -1,3 +1,10 @@
 <P ALIGN=CENTER><B>Wiki inhoud bij start</B></P>
 
-<P>Dit is de inhoud waarmee je de Wiki kan vullen van bij het begin. Zo heeft ErfurtWiki bijvoorbeeld heel wat standaardpagina's die het gebruik en de syntax van de Wiki uitleggen. Als er een vertaling bestaat, dan wordt de nieuwe Wiki gevuld met een set pagina's uit het taalpakket.</P>
+<P>Dit is de inhoud waarmee je de Wiki kan vullen van bij het begin van een nieuwe Wiki. Zo heeft ErfurtWiki bijvoorbeeld heel wat standaardpagina's die het gebruik en de syntax van de Wiki uitleggen. Als er een vertaling bestaat, dan wordt de nieuwe Wiki gevuld met een set pagina's uit het taalpakket.</P>
+<P>Als je je eigen startinhoud wil maken, maak het dan als tekstbestand of in een wiki die je dan exporteert met de ErtfurtWiki tools. De startpagina moet <I>WikiIndex</I> heten. Dan:
+<UL>
+  <LI>Maak een nieuwe map in <I>lang/eng/help/wiki/initialcontent/<I>. Gebruik geen minteken of spaties in de naam.</LI>
+  <LI>Als de jaar van jouw nieuwe startpagina geen Engels is, maak dan dezelfde map in <I>lang/<B>jouw taal</B>/help/wiki/initialcontent/</I></LI>
+  <LI>Optioneel: voeg een lijn toe in <I>lang/<B>(jouw taal)</B>/wiki.php</I>waarmee de naam van je map in een zinnige uitdrukking vertaald kan worden.</LI>
+</UL>
+</P>
