Translated by Claudio Maggi

--- a/lang/it/help/surveys.html
+++ b/lang/it/help/surveys.html
@@ -1,93 +1,76 @@
-<P ALIGN=CENTER><B>Available surveys</B></P>
+<P ALIGN=CENTER><B>Sondaggi disponibili</B></P>
 
-<P>Currently, Moodle only offers specific types of surveys (future versions 
-will enable you to create your own).</P>
+<P>Attualmente, Moodle offre particolari tipi di sondaggi (future versioni permetteranno di crearne di propri).</P>
 
-<P>The available surveys have been chosen as being particularly useful for 
-evaluating online learning environments that use a constructivist pedagogy. 
-They are useful to identify certain trends that may be happening among
-your participants.
+<P>I sondaggi disponibili sono stati scelti poich&eacute; sono particolarmente utili per la valutazione degli ambienti di apprendimento online che utilizzano la pedagogia costruttivista. Servono a identificare certe tendenze che possono manifestarsi tra i partecipanti a un corso.
 
-(To see a paper where these are used in a detailed analysis, see:  
+(Per esaminare una relazione in cui questi sondaggi sono utilizzati per una analisi dettagliata, vedere:  
 <A TARGET=paper HREF="http://dougiamas.com/writing/herdsa2002">http://dougiamas.com/writing/herdsa2002</A>)</P>
 
 <HR>
-<P><B>COLLES - Constructivist On-Line Learning Environment Survey</B></P>
+<P><B>COLLES - Constructivist On-Line Learning Environment Survey (Sondaggio per un ambiente di apprendimento on-line di tipo Costruttivista)</B></P>
 <UL>
-  <p>The COLLES comprises an economical 24 statements grouped into six scales, 
-    each of which helps us address a key question about the quality of the on-line 
-    learning environment: </p>
+  <p>Il sondaggio COLLES comprende 24 affermazioni raggruppate secondo 6 criteri, 
+    ciascuno dei quali serve a valutare un aspetto chiave della qualit&agrave; dell'ambiente di apprendimento online: </p>
 
 <table BORDER="0" CELLSPACING="10" CELLPADDING="10">
   <tr> 
-    <td valign=top>Relevance</td>
-    <td>How relevant is on-line learning to students' professional practices? 
+    <td valign=top>Pertinenza</td>
+    <td>Quanto &egrave; pertinente l'apprendimento on-line alla professionalit&agrave; futura degli studenti? 
     </td>
   </tr>
   <tr> 
-    <td valign=top>Reflection </td>
+    <td valign=top>Senso critico</td>
 
-    <td>Does on-line learning stimulate students' critical reflective thinking? 
+    <td>L'apprendimento on-line stimola ulteriormente il senso critico degli studenti? 
     </td>
   </tr>
   <tr> 
-    <td valign=top>Interactivity </td>
-    <td>To what extent do students engage on-line in rich educative dialogue? 
+    <td valign=top>Interattivit&agrave;</td>
+    <td>In che misura gli studenti si impegnano on-line in dialoghi tali da aumentare il loro apprendimento? 
     </td>
   </tr>
   <tr> 
-    <td valign=top>Tutor Support</td>
+    <td valign=top>Sostegno da parte del Tutor</td>
 
-    <td>How well do tutors enable students to participate in on-line learning? 
+    <td>In che misura i tutor incoraggiano e aiutano gli studenti a partecipare all'apprendimento on-line? 
     </td>
   </tr>
   <tr> 
-    <td valign=top>Peer Support </td>
-    <td>Is sensitive and encouraging support provided on-line by fellow students? 
+    <td valign=top>Sostegno da parte dei colleghi</td>
+    <td>Esiste on-line un supporto significativo e un incoraggiamento da parte dei colleghi? 
     </td>
   </tr>
   <tr> 
-    <td valign=top>Interpretation </td>
+    <td valign=top>Comunicazione</td>
 
-    <td>Do students and tutors make good sense of each other's on-line communications?</td>
+    <td>Sono significative, utili e comprensibili le comunicazioni on-line tre studenti e tutor?</td>
   </tr>
 </table>
 
-  <p>Underpinning the dynamic view of learning is a new theory of knowing: social 
-    constructivism, which portrays the learner as an active conceptualiser within 
-    a socially interactive learning environment. Social constructivism is an epistemology, 
-    or way of knowing, in which learners collaborate reflectively to co-construct 
-    new understandings, especially in the context of mutual inquiry grounded in 
-    their personal experience. </p>
+  <p>Alla base dell'aspetto dinamico dell'apprendimento c'&egrave; la teoria del costruttuvismo sociale, che vede nello studente un attore attivo in un ambiente di studio socialmente interattivo. Il costruttivismo sociale &egrave; un modo di apprendere, col quale gli studenti collaborano per costruire nuovi saperi, specialmente attraverso una mutua interrogazione basata sulle loro esperienze personali. </p>
 
-  <p>Central to this collaboration is the development of students' communicative 
-    competence, that is, the ability to engage in open and critical discourse 
-    with both the teacher and peers. This discourse is characterised by an empathic 
-    orientation to constructing reciprocal understanding, and a critical attitude 
-    towards examining underlying assumptions. </p>
-
-  <p>The COLLES has been designed to enable you
-    to monitor the extent to which you are able to exploit the interactive capacity 
-    of the World Wide Web for engaging students in dynamic learning practices. </p>
+  <p>Il punto centrale di questa collaborazione &egrave; lo sviluppo della competenza comunicativa degli studenti, cio&egrave; la capacit&agrave; di impegnarsi in aperte e critiche discussioni sia con gli insegnanti che con i colleghi. Queste discussioni sono caratterizzate da una comune disposizione a costruire la comprensione reciproca e l'attitudine critica verso l'analisi dei presupposti.
+  
+  <p>Il sondaggio COLLES &egrave; stato predisposto per permettere di monitorare fino a che punto si &egrave; stati capaci di sfruttare le possibilit&agrave; interattive del World Wide Web, per stimolare gli studenti a utilizzare le modalit&agrave; di apprendimento dinamico. </p>
 
 <P>
-(This information has been adapted from the COLLES page.  You can find out more about 
-COLLES and the authors of it at: 
+(Queste informazioni sono state adattate dalle pagine COLLES. Si pu&ograve; trovare ulteriore documentazione su COLLES e i suoi autori all'indirizzo: 
 <A TARGET=paper HREF="http://surveylearning.com/colles/">http://surveylearning.com/colles/</A>)</P>
 </UL>
 
 
 <HR>
-<P><B>ATTLS - Attitudes to Thinking and Learning Survey</B></P>
+<P><B>ATTLS - Attitudes to Thinking and Learning Survey (Sondaggio delle attitudini a pensare e a imparare)</B></P>
 <UL>
 
-<P>The theory of 'ways of knowing', originally from the field of gender research (Belenky et al., 1986) provides us with a survey tool to examine the quality of discourse within a collaborative environment. 
+<P>La teoria dei 'modi di conoscere', originaria dal settore della ricerca (Belenky et al., 1986) ci fornisce uno strumento per analizzare la qualit&agrave; della discussione in un ambiente collaborativo. 
 
-<P>The Attitudes Towards Thinking and Learning Survey (ATTLS) is an instrument developed by Galotti et al. (1999) to measure the extent to which a person is a 'connected knower' (CK) or a 'separate knower' (SK). 
+<P>Le 'Attitudes Towards Thinking and Learning Survey' (ATTLS) costituiscono uno strumento sviluppato da Galotti et al. (1999) per misurare fino a che punto una persona &egrave; un 'conoscitore collegato' (CK-connected knower) o un 'conoscitore isolato' (SK-separate knower). 
 
-<P>People with higher CK scores tend to find learning more enjoyable, and are often more cooperative, congenial and more willing to build on the ideas of others, while those with higher SK scores tend to take a more critical and argumentative stance to learning. 
+<P>Le persone con un'alta valutazione CK tendono a trovare l'apprendimento pi&ugrave; divertente, e sono spesso pi&ugrave; cooperative, pi&ugrave; socievoli e pi&ugrave; desiderose di costruire sulle idee degli altri, mentre le persone con un pi&ugrave; alto grado SK tendono a prendere una posizione pi&ugrave; critica e argomentativa nell'apprendimento.
 
-<P>Studies have shown that these two learning styles are independent of each other (Galotti et al., 1999; Galotti et al., 2001). Additionally, they are only a reflection of learning attitudes, not learning capacities or intellectual power. 
+<P>Studi hanno dimostrato che questi due stili di apprendimento sono indipendenti l'uno dall'altro (Galotti et al., 1999; Galotti et al., 2001). Inoltre, sono solamente un riflesso delle attitudini all'apprendimento, e non delle capacit&agrave; di apprendimento n&eacute; delle potenzialit&agrave; intellettuali. 
 
 <P><I>Belenky, M. F., Clinchy, B. M., Goldberger, N. R., & Tarule, J. M. (1986). Women's Ways of Knowing: The Development of Self, Voice, and Mind. New York: Basic Books, Inc. </I></P>
 
