--- a/backup/restore_execute.html
+++ b/backup/restore_execute.html
@@ -267,6 +267,14 @@
         }
     }
 
+    //Now, if all is OK, adjust activity events
+    if ($status) {
+        echo "<li>".get_string("refreshingevents");
+        if (!$status = restore_refresh_events($restore)) {
+            notify("Could not refresh events for activities!");
+        }
+    }
+
     //Now if all is OK, update:
     //   - course modinfo field 
     //   - categories table
