--- a/lang/fi/help/coursecategory.html
+++ b/lang/fi/help/coursecategory.html
@@ -1,7 +1,8 @@
-<P ALIGN=CENTER><B>Kurssikategoriat</B></P>
 
-<p>Moodlen ylläpitäjäsi on voinut muodostaa useita kurssikategorioita.</p>
+<p align="center"><b>Kurssikategoriat</b></p>
 
-<p>Esimerkiksi "Luonnontieteet", "Humanistiset tieteet", "Julkinen terveydenhoito" jne.</p>
+<p>Moodle ylläpitäjäsi on voinut luoda useita kurssikategorioita.</p>
+
+<p>Esimerkiksi &quot;Luonnontieteet&quot;, &quot;Humanistiset tieteet&quot;, &quot;Julkinen terveydenhoito&quot; jne.</p>
 
 <p>Valitse kategoria, joka sopii parhaiten kurssiisi. Tämä valinta vaikuttaa siihen, missä kohdassa kurssisi näkyy kurssiluettelossa ja saattaa näin helpottaa kurssisi löytymistä.</p>
