Html code cleanup

--- a/theme/formal_white/footer.html
+++ b/theme/formal_white/footer.html
@@ -1,9 +1,9 @@
 <!-- START OF FOOTER -->
-<HR SIZE=1 NOSHADE>
+<hr size="1" noshade="noshade" />
 <table width="100%" border="0" cellpadding="5" cellspacing="0">
   <tr>
     <td align="center"><p class="logininfo"><?php echo $loggedinas ?> | <?php echo $homelink ?></p></td>
   </tr>
 </table>
-</BODY>
-</HTML>
+</body>
+</html>
