typo (mising < can mess things up)

--- a/lang/nl/help/wiki/formattingrules.html
+++ b/lang/nl/help/wiki/formattingrules.html
@@ -24,7 +24,7 @@ Elke pagina binnen een WikiWikiWeb kan gemakkelijk bewerkt worden en omdat het s
 
   <ul>
 
-  <li> als je tekst wil <em>beklemtonen/em>, dan moet je die tussen 2 enkele aanhalingstekens zetten '' (ziet er gewoonlijk als italic uit)</li>
+  <li> als je tekst wil <em>beklemtonen</em>, dan moet je die tussen 2 enkele aanhalingstekens zetten '' (ziet er gewoonlijk als italic uit)</li>
   <li> <strong>tekst wordt vet</strong> met twee underscores __ (of als het ingesloten is door twee sterretjes **)</li>
   <li> om <big>tekst groot</big> te maken omsluit je het met spoorwegtekens ##</li>
 
